# easy-yahtzee

./: .gitignore  .travis.yml  Cargo.toml  README.md  webpack.config.js
benches/: benches.rs
src/: app.rs  lib.rs  lib_bk.rs  lib_bk2.rs  main.rs  main_bk.rs
static/: index.html  styles.css
tests/: integration_test.rs
