[package]
name = "optizee"
version = "0.1.0"
authors = ["Jonathan Stites <mail@jonstites.com>"]
edition = "2018"

[dependencies]
ndarray = { version = "0.13.0", features = ["serde"]}
rayon = "1.2"
bincode = "1.2"
flate2 = "1.0"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = "0.2"
lazy_static = "1.4"
bitflags = "1.2"

[profile.test]
opt-level = 3
