[package]
name = "optizee"
version = "0.1.0"
authors = ["Jonathan Stites <mail@jonstites.com>"]
edition = "2018"

[dependencies]
ndarray = {version = "0.13", features = ["serde-1"]}
rayon = "1.2"
lazy_static = "1.4"
bitflags = "1.2"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.2"
clap = "2.33"

[profile.test]
opt-level = 3