[package]
name = "easy-yahtzee"
version = "0.1.0"
authors = ["Jonathan Stites <mail@jonstites.com>"]
edition = "2018"

[dependencies]
bincode = "1.2"
bitflags = "1.2"
clap = "2.33"
exitfailure = "0.5.1"
failure = "0.1.6"
lazy_static = "1.4"
ndarray = { version = "0.13", features = ["serde-1"] }
rayon = "1.2"
serde = { version = "1.0", features = ["derive"] }

[profile.test]
opt-level = 3
lto = true                                                                                                                                                                                                       